# customer-churn-analysis

./: .gitignore  README.md  data_extraction_and_eda.ipynb  dataset_eda.ipynb  dataset_extraction_and_eda.ipynb  feature_engineering_and_modelling.ipynb  predictive_modelling.ipynb  pyproject.toml  requirements.txt
